# Information-Systems

./: README.md
demo/tgbot-python-docker/src/: Dockerfile  requirements.txt
demo/tgbot-python-docker/src/bot_elements/status/: status.py
kasperskyOs/: CMakeLists.txt  README.md
kasperskyOs/client/: CMakeLists.txt
kasperskyOs/client/src/: client.c
kasperskyOs/custom_vfs/: CMakeLists.txt
kasperskyOs/einit/: CMakeLists.txt
kasperskyOs/einit/src/: common.psl  init.yaml.in  security.x86.psl
kasperskyOs/env/: CMakeLists.txt
kasperskyOs/env/src/: env.c
kasperskyOs/resources/edl/: Client.edl  Env.edl  VfsNet.edl  VfsRamFs.edl  VfsSdcardFs.edl
kasperskyOs/resources/include/: config.h.in
kasperskyOs/resources/sdcard/etc/: dhcpcd_static.conf
lab_project/cod/: CMakeCache.txt  Makefile  camera.h  cmake_install.cmake  main  main.cpp  minimal_prototype.cpp
lab_project/cod/cpp/: main.cpp
lab_project/cod/cpp/modules/: camera.h  client.h  detection.h  server.h
task1/: concept_model_arcanoid.pu  use_case_diagram_arcanoid.pu
